[package]
name = "carbide"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
csv = "1"
phf_codegen = "0.7"

[dependencies]
carbide-gcode = {path="../carbide-gcode"}

serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
serde_json = "1"

failure = "0.1"
bytes = "0.4"
regex = "1"
lazy_static = "1"
phf = "0.7"

log = "0.4"
pretty_env_logger = "0.3"

futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-serial = "3"

warp = "0.1"
